--- a/css/main.css
+++ b/css/main.css
@@ -28,7 +28,27 @@
         -ms-flex-pack: end;
             justify-content: flex-end; }
     .header_wrap .header_right a {
-      margin-left: 8px; }
+      margin-left: 8px;
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -webkit-box-pack: center;
+      -webkit-justify-content: center;
+          -ms-flex-pack: center;
+              justify-content: center; }
+    .header_wrap .header_right a:first-child img {
+      height: 23px;
+      -o-object-fit: contain;
+         object-fit: contain; }
+    .header_wrap .header_right a:last-child img {
+      height: 23px;
+      -o-object-fit: contain;
+         object-fit: contain; }
 
 .bg {
   background: rgba(33, 33, 33, 0.51);
@@ -421,6 +441,8 @@ nav {
       -webkit-justify-content: center;
           -ms-flex-pack: center;
               justify-content: center; }
+      .item_output .item .item_btn a:last-child img {
+        height: 19px; }
 
 .consultant {
   margin-bottom: 50px; }
