--- a/scss/header/header.scss
+++ b/scss/header/header.scss
@@ -17,6 +17,17 @@
         justify-content: flex-end;
         a {
             margin-left: 8px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        a:first-child img{
+            height: 23px;
+            object-fit: contain;
+        }
+        a:last-child img{
+            height: 23px;
+            object-fit: contain;
         }
     }
 }
