--- a/scss/home/home.scss
+++ b/scss/home/home.scss
@@ -253,6 +253,9 @@
                 display: flex;
                 align-items: center;
                 justify-content: center;
+                img {
+                    height: 19px;
+                }
             }
         }
     }
