--- a/scss/header/header.scss
+++ b/scss/header/header.scss
@@ -1,3 +1,6 @@
+header {
+    border-bottom: 1px solid #A0A0A0;
+}
 .header_wrap {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -28,6 +31,23 @@
         a:last-child img{
             height: 23px;
             object-fit: contain;
+        }
+        a:last-child {
+            position: relative;
+            span {
+                border-radius: 50%;
+                top: 10px;
+                height: 10px;
+                width: 10px;
+                position: absolute;
+                background: #B92362;
+                color: #fff;
+                font: 7px "600";
+                text-align: center;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
         }
     }
 }
