--- a/scss/header/header.scss
+++ b/scss/header/header.scss
@@ -1,6 +1,13 @@
 header {
     border-bottom: 1px solid #A0A0A0;
 }
+
+.header_logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .header_wrap {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -69,7 +76,7 @@ header {
 
 .bg_active {
     opacity: 1;
-    pointer-events: autos;
+    pointer-events: auto;
 }
 
 nav {
