--- a/css/main.css
+++ b/css/main.css
@@ -1232,15 +1232,6 @@ footer {
       font: .95rem "400";
       color: #000; }
 
-.footer_bottom img {
-  max-width: 100%;
-  height: auto;
-  -o-object-fit: contain;
-     object-fit: contain;
-  display: block;
-  margin: 0 auto;
-  margin-bottom: 10px; }
-
 .footer_bottom p {
   border-top: .5px solid #838383;
   padding: 10px;
@@ -1325,6 +1316,27 @@ footer {
 /* animate out */
 .my-mfp-slide-bottom.mfp-removing.mfp-bg {
   opacity: 0; }
+
+.footer_icon {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 5px;
+  padding: 0 15px; }
+  .footer_icon img {
+    max-width: 100%;
+    max-height: 60px;
+    -o-object-fit: cover;
+       object-fit: cover; }
 
 .thank_modal {
   max-width: 345px;
