--- a/scss/home/home.scss
+++ b/scss/home/home.scss
@@ -244,6 +244,11 @@
                 padding: 8px;
                 display: block;
                 font: .75rem "400";
+                transition: .3s;
+                &:hover {
+                    background: #000;
+                    color: #fff;
+                }
             }
             a:last-child {
                 background: #000;
@@ -811,6 +816,7 @@
         .clients_item_sm  {
             position: relative;
             overflow: hidden;
+            height: 350px;
         }
         .clients_item_sm:nth-child(1) {
             img {
