--- a/scss/modal/modal.scss
+++ b/scss/modal/modal.scss
@@ -271,6 +271,9 @@
                 height: 100%;
                 text-align: center;
                 border: none;
+                background: transparent;
+                appearance: none;
+                outline: none;
                 box-sizing: border-box;
                 appearance: none;
                 outline: none;
