--- a/scss/footer/footer.scss
+++ b/scss/footer/footer.scss
@@ -6,6 +6,7 @@ footer {
     }
     .footer_logo {
         margin-bottom: 5px;
+        height: 40px;
     }
     .newsletter_title {
         margin-bottom: 15px;
