--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,6 @@
 @import "header/header.scss";
 @import "home/home.scss";
+@import "catalog/catalog.scss";
 @import "footer/footer.scss";
 @import "modal/modal.scss";
 @import "constant/constant.scss";
