--- a/scss/home/home.scss
+++ b/scss/home/home.scss
@@ -849,10 +849,14 @@
         }
     }
     .clint_slider {
-        padding-bottom: 35px;
+        position: relative;
+        padding-bottom: 40px;
     }
     .swiper-container-horizontal>.swiper-pagination-bullets, .swiper-pagination-custom, .swiper-pagination-fraction {
-        bottom: 0;
+        bottom: 0!important;
+    }
+    .swiper-pagination {
+        bottom: 0!important;
     }
 }
 
