--- a/scss/home/home.scss
+++ b/scss/home/home.scss
@@ -702,6 +702,7 @@
                     position: relative;
                     a {
                         text-decoration: underline;
+                        color: #fff;
                         font: 1.05rem/20px "600";
                     }
                     &::after {
